cabal-version:      3.0
category:           Development
name:               haskell-language-server
version:            2.6.0.0
synopsis:           LSP server for GHC
description:
  Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>

homepage:           https://github.com/haskell/haskell-language-server#readme
bug-reports:        https://github.com/haskell/haskell-language-server/issues
author:             The Haskell IDE Team
maintainer:         alan.zimm@gmail.com
copyright:          The Haskell IDE Team
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 9.8.1 || ==9.6.4 || ==9.4.8 || ==9.2.8
extra-source-files:
  README.md
  ChangeLog.md
  test/testdata/**/*.project
  test/testdata/**/*.cabal
  test/testdata/**/*.yaml
  test/testdata/**/*.hs

  plugins/**/test/testdata/*.hs
  plugins/**/test/testdata/*.yaml

  bindist/wrapper.in

source-repository head
  type:     git
  location: https://github.com/haskell/haskell-language-server

common common-deps
  build-depends:
    , base       >=4.16 && <5
    , directory
    , extra
    , filepath
    , text
    , prettyprinter >= 1.7

-- Default warnings in HLS
common warnings
  ghc-options: -Wall -Wredundant-constraints -Wno-name-shadowing -Wno-unticked-promoted-constructors

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

-- Allow compiling in pedantic mode
common pedantic
  if flag(pedantic)
    ghc-options: -Werror

-- Plugin flags are designed for 'cabal install haskell-language-server':
-- - Bulk flags should be default:False
-- - Individual flags should be default:True

-- The intent of this flag is being able to keep the ghc condition for hackage
-- but skip it via flags in cabal.project as plugins for new ghcs usually
-- are buildable using cabal.project tweaks
flag ignore-plugins-ghc-bounds
  description: Force the inclusion of plugins even if they are not buildable by default with a specific ghc version
  default:     False
  manual:      True

flag dynamic
  description: Build with the dyn rts
  default:     True
  manual:      True

-----------------------------
-- cabal-fmt plugin
-----------------------------

flag cabalfmt
  description: Enable cabal-fmt plugin
  default:     True
  manual:      True

common cabalfmt
  if flag(cabalfmt)
    build-depends: hls-cabal-fmt-plugin
    cpp-options: -Dhls_cabalfmt

flag isolateCabalfmtTests
  description: Should tests search for 'cabal-fmt' on the $PATH or shall we install it via build-tool-depends?
  -- By default, search on the PATH
  default:     False
  manual:      True

library hls-cabal-fmt-plugin
  import:           warnings
  exposed-modules:  Ide.Plugin.CabalFmt
  hs-source-dirs:   plugins/hls-cabal-fmt-plugin/src
  build-depends:
    , base            >=4.12 && <5
    , directory
    , filepath
    , ghcide          == 2.6.0.0
    , hls-plugin-api  == 2.6.0.0
    , lens
    , lsp-types
    , mtl
    , process-extras
    , text

  default-language: Haskell2010

test-suite hls-cabal-fmt-plugin-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     plugins/hls-cabal-fmt-plugin/test
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , directory
    , filepath
    , hls-cabal-fmt-plugin
    , hls-test-utils        == 2.6.0.0

  if flag(isolateCabalfmtTests)
    build-tool-depends: cabal-fmt:cabal-fmt ^>=0.1.6

-----------------------------
-- cabal plugin
-----------------------------

flag cabal
  description: Enable cabal plugin
  default:     True
  manual:      True

common cabal
  if flag(cabal)
    build-depends: hls-cabal-plugin == 2.6.0.0
    cpp-options: -Dhls_cabal

library hls-cabal-plugin
  import:           warnings
  exposed-modules:
    Ide.Plugin.Cabal
    Ide.Plugin.Cabal.Diagnostics
    Ide.Plugin.Cabal.Completion.Completer.FilePath
    Ide.Plugin.Cabal.Completion.Completer.Module
    Ide.Plugin.Cabal.Completion.Completer.Paths
    Ide.Plugin.Cabal.Completion.Completer.Simple
    Ide.Plugin.Cabal.Completion.Completer.Snippet
    Ide.Plugin.Cabal.Completion.Completer.Types
    Ide.Plugin.Cabal.Completion.Completions
    Ide.Plugin.Cabal.Completion.Data
    Ide.Plugin.Cabal.Completion.Types
    Ide.Plugin.Cabal.LicenseSuggest
    Ide.Plugin.Cabal.Parse


  build-depends:
    , base                  >=4.12     && <5
    , bytestring
    , Cabal-syntax          >= 3.7
    , containers
    , deepseq
    , directory
    , filepath
    , extra                 >=1.7.4
    , ghcide                == 2.6.0.0
    , hashable
    , hls-plugin-api        == 2.6.0.0
    , hls-graph             == 2.6.0.0
    , lens
    , lsp                   ^>=2.3
    , lsp-types             ^>=2.1
    , regex-tdfa            ^>=1.3.1
    , stm
    , text
    , text-rope
    , transformers
    , unordered-containers  >=0.2.10.0
    , containers
  hs-source-dirs:   plugins/hls-cabal-plugin/src
  default-language: Haskell2010

test-suite hls-cabal-plugin-tests
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   plugins/hls-cabal-plugin/test
  main-is:          Main.hs
  other-modules:
    Completer
    Context
    Utils
  build-depends:
    , base
    , bytestring
    , Cabal-syntax          >= 3.7
    , filepath
    , hls-cabal-plugin
    , hls-test-utils    == 2.6.0.0
    , lens
    , lsp
    , lsp-types
    , text
    , text-rope
    , transformers
    , row-types

-----------------------------
-- class plugin
-----------------------------

flag class
  description: Enable class plugin
  default:     True
  manual:      True

common class
  if flag(class)
    build-depends: hls-class-plugin == 2.6.0.0
    cpp-options: -Dhls_class

library hls-class-plugin
  import: warnings
  exposed-modules:    Ide.Plugin.Class
  other-modules:      Ide.Plugin.Class.CodeAction
                    , Ide.Plugin.Class.CodeLens
                    , Ide.Plugin.Class.ExactPrint
                    , Ide.Plugin.Class.Types
                    , Ide.Plugin.Class.Utils
  hs-source-dirs:     plugins/hls-class-plugin/src
  build-depends:
    , aeson
    , base            >=4.12 && <5
    , containers
    , deepseq
    , extra
    , ghc
    , ghc-exactprint  >= 1.5
    , ghcide          == 2.6.0.0
    , hls-graph
    , hls-plugin-api  == 2.6.0.0
    , lens
    , lsp
    , mtl
    , text
    , transformers

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    TypeOperators
    OverloadedStrings

test-suite hls-class-plugin-tests
  import: warnings
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   plugins/hls-class-plugin/test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , filepath
    , ghcide
    , hls-class-plugin
    , hls-test-utils     == 2.6.0.0
    , lens
    , lsp-types
    , row-types
    , text

-----------------------------
-- call-hierarchy plugin
-----------------------------

flag callHierarchy
  description: Enable call hierarchy plugin
  default:     True
  manual:      True

common callHierarchy
  if flag(callHierarchy)
    build-depends: hls-call-hierarchy-plugin == 2.6.0.0
    cpp-options: -Dhls_callHierarchy

library hls-call-hierarchy-plugin
  import: warnings
  buildable: True
  exposed-modules:    Ide.Plugin.CallHierarchy
  other-modules:
    Ide.Plugin.CallHierarchy.Internal
    Ide.Plugin.CallHierarchy.Query
    Ide.Plugin.CallHierarchy.Types

  hs-source-dirs:     plugins/hls-call-hierarchy-plugin/src
  build-depends:
    , aeson
    , base                  >=4.12 && <5
    , containers
    , extra
    , ghcide                == 2.6.0.0
    , hiedb
    , hls-plugin-api        == 2.6.0.0
    , lens
    , lsp                    >=2.3
    , sqlite-simple
    , text

  default-language:   Haskell2010
  default-extensions: DataKinds

test-suite hls-call-hierarchy-plugin-tests
  import: warnings
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   plugins/hls-call-hierarchy-plugin/test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , containers
    , extra
    , filepath
    , hls-call-hierarchy-plugin
    , hls-test-utils              == 2.6.0.0
    , ghcide-test-utils
    , lens
    , lsp
    , lsp-test
    , text

-----------------------------
-- eval plugin
-----------------------------

flag eval
  description: Enable eval plugin
  default:     True
  manual:      True

common eval
  if flag(eval)
    build-depends: hls-eval-plugin == 2.6.0.0
    cpp-options: -Dhls_eval

library hls-eval-plugin
  import: warnings
  exposed-modules:
    Ide.Plugin.Eval
    Ide.Plugin.Eval.Types

  hs-source-dirs:     plugins/hls-eval-plugin/src
  other-modules:
    Ide.Plugin.Eval.Code
    Ide.Plugin.Eval.CodeLens
    Ide.Plugin.Eval.Config
    Ide.Plugin.Eval.GHC
    Ide.Plugin.Eval.Parse.Comments
    Ide.Plugin.Eval.Parse.Option
    Ide.Plugin.Eval.Rules
    Ide.Plugin.Eval.Util

  build-depends:
    , aeson
    , base                  >=4.12  && <5
    , bytestring
    , containers
    , deepseq
    , Diff                  ^>=0.4.0
    , dlist
    , extra
    , filepath
    , ghc
    , ghc-boot-th
    , ghcide                == 2.6.0.0
    , hls-graph
    , hls-plugin-api        == 2.6.0.0
    , lens
    , lsp
    , lsp-types
    , megaparsec            >=9.0
    , mtl
    , parser-combinators    >=1.2
    , text
    , transformers
    , unliftio
    , unordered-containers

  if flag(pedantic)
    ghc-options: -Werror

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    TypeOperators

test-suite hls-eval-plugin-tests
  import: warnings
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   plugins/hls-eval-plugin/test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
    , aeson
    , base
    , containers
    , extra
    , filepath
    , hls-eval-plugin
    , hls-plugin-api
    , hls-test-utils   == 2.6.0.0
    , lens
    , lsp-types
    , text
    , row-types

-----------------------------
-- import lens plugin
-----------------------------

common importLens
  if flag(importLens)
    build-depends: hls-explicit-imports-plugin == 2.6.0.0
    cpp-options: -Dhls_importLens

flag importLens
  description: Enable importLens plugin
  default:     True
  manual:      True

library hls-explicit-imports-plugin
  import:           warnings
  exposed-modules:    Ide.Plugin.ExplicitImports
  hs-source-dirs:     plugins/hls-explicit-imports-plugin/src
  build-depends:
    , aeson
    , base                  >=4.12 && <5
    , containers
    , deepseq
    , ghc
    , ghcide                == 2.6.0.0
    , hls-graph
    , hls-plugin-api        == 2.6.0.0
    , lens
    , lsp
    , mtl
    , text
    , transformers
    , unordered-containers

  default-language:   Haskell2010
  default-extensions:
    DataKinds
    TypeOperators

  if flag(pedantic)
    ghc-options: -Werror

test-suite hls-explicit-imports-plugin-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   plugins/hls-explicit-imports-plugin/test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , extra
    , filepath
    , hls-explicit-imports-plugin
    , hls-test-utils
    , lens
    , lsp-types
    , row-types
    , text

-----------------------------
-- rename plugin
-----------------------------

flag rename
  description: Enable rename plugin
  default:     True
  manual:      True

common rename
  if flag(rename)
    build-depends: hls-rename-plugin == 2.6.0.0
    cpp-options: -Dhls_rename

library hls-rename-plugin
  exposed-modules:  Ide.Plugin.Rename
  hs-source-dirs:   plugins/hls-rename-plugin/src
  build-depends:
    , base                  >=4.12    && <5
    , containers
    , extra
    , ghc
    , ghc-exactprint
    , ghcide                == 2.6.0.0
    , hashable
    , hiedb
    , hie-compat
    , hls-plugin-api        == 2.6.0.0
    , hls-refactor-plugin
    , lens
    , lsp
    , lsp-types
    , mtl
    , mod
    , syb
    , text
    , transformers
    , unordered-containers

  default-language: Haskell2010

test-suite hls-rename-plugin-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   plugins/hls-rename-plugin/test
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , containers
    , filepath
    , hls-plugin-api
    , hls-rename-plugin
    , hls-test-utils             == 2.6.0.0

-----------------------------
-- retrie plugin
-----------------------------

flag retrie
  description: Enable retrie plugin
  default:     True
  manual:      True

common retrie
  if flag(retrie)
    build-depends: hls-retrie-plugin == 2.6.0.0
    cpp-options: -Dhls_retrie

-----------------------------
-- hlint plugin
-----------------------------

flag hlint
  description: Enable hlint plugin
  default:     True
  manual:      True

common hlint
  if flag(hlint) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
    build-depends: hls-hlint-plugin == 2.6.0.0
    cpp-options: -Dhls_hlint

-----------------------------
-- stan plugin
-----------------------------

flag stan
  description: Enable stan plugin
  default:     True
  manual:      True

common stan
  if flag(stan) && (impl(ghc > 8.8.1) && impl(ghc <= 9.2.3) || impl(ghc >= 9.4.0) && impl(ghc < 9.10.0))
    build-depends: hls-stan-plugin == 2.6.0.0
    cpp-options: -Dhls_stan

-----------------------------
-- module name plugin
-----------------------------

flag moduleName
  description: Enable moduleName plugin
  default:     True
  manual:      True

common moduleName
  if flag(moduleName)
    build-depends: hls-module-name-plugin == 2.6.0.0
    cpp-options: -Dhls_moduleName

-----------------------------
-- pragmas plugin
-----------------------------

flag pragmas
  description: Enable pragmas plugin
  default:     True
  manual:      True

common pragmas
  if flag(pragmas)
    build-depends: hls-pragmas-plugin == 2.6.0.0
    cpp-options: -Dhls_pragmas

-----------------------------
-- splice plugin
-----------------------------

flag splice
  description: Enable splice plugin
  default:     True
  manual:      True

common splice
  if flag(splice)
    build-depends: hls-splice-plugin == 2.6.0.0
    cpp-options: -Dhls_splice

-----------------------------
-- alternate number format plugin
-----------------------------

flag alternateNumberFormat
  description: Enable Alternate Number Format plugin
  default:     True
  manual:      True

common alternateNumberFormat
  if flag(alternateNumberFormat)
    build-depends: hls-alternate-number-format-plugin
    cpp-options: -Dhls_alternateNumberFormat

library hls-alternate-number-format-plugin
  import:           warnings
  exposed-modules:  Ide.Plugin.AlternateNumberFormat, Ide.Plugin.Conversion
  other-modules:    Ide.Plugin.Literals
  hs-source-dirs:   plugins/hls-alternate-number-format-plugin/src
  ghc-options:      -Wall
  build-depends:
    , base                 >=4.12 && < 5
    , containers
    , extra
    , ghcide               == 2.6.0.0
    , ghc-boot-th
    , hls-graph
    , hls-plugin-api       == 2.6.0.0
    , lens
    , lsp                  ^>=2.3.0.0
    , mtl
    , regex-tdfa
    , syb
    , text

  default-language: Haskell2010
  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards

test-suite hls-alternate-number-format-plugin-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   plugins/hls-alternate-number-format-plugin/test
  other-modules: Properties.Conversion
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
  build-depends:
    , base                 >=4.12 && < 5
    , filepath
    , hls-alternate-number-format-plugin
    , hls-test-utils       == 2.6.0.0
    , regex-tdfa
    , tasty-quickcheck
    , text

  default-extensions:
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards

-----------------------------
-- qualify imported names plugin
-----------------------------

flag qualifyImportedNames
  description: Enable qualifyImportedNames plugin
  default:     True
  manual:      True

common qualifyImportedNames
  if flag(qualifyImportedNames)
    build-depends: hls-qualify-imported-names-plugin == 2.6.0.0
    cpp-options: -Dhls_qualifyImportedNames

-----------------------------
-- code range plugin
-----------------------------

flag codeRange
  description: Enable Code Range plugin
  default:     True
  manual:      True

common codeRange
  if flag(codeRange)
    build-depends: hls-code-range-plugin == 2.6.0.0
    cpp-options: -Dhls_codeRange

-----------------------------
-- change type signature plugin
-----------------------------

flag changeTypeSignature
  description: Enable changeTypeSignature plugin
  default:     True
  manual:      True

common changeTypeSignature
  if flag(changeTypeSignature)
    build-depends: hls-change-type-signature-plugin == 2.6.0.0
    cpp-options: -Dhls_changeTypeSignature

-----------------------------
-- gadt plugin
-----------------------------

flag gadt
  description: Enable gadt plugin
  default:     True
  manual:      True

common gadt
  if flag(gadt)
    build-depends: hls-gadt-plugin == 2.6.0.0
    cpp-options: -Dhls_gadt

-----------------------------
-- explicit fixity plugin
-----------------------------

flag explicitFixity
  description: Enable explicitFixity plugin
  default:     True
  manual:      True

common explicitFixity
  if flag(explicitFixity)
    build-depends: hls-explicit-fixity-plugin == 2.6.0.0
    cpp-options: -DexplicitFixity

-----------------------------
-- explicit fields plugin
-----------------------------

flag explicitFields
  description: Enable explicitFields plugin
  default:     True
  manual:      True

common explicitFields
  if flag(explicitFields)
    build-depends: hls-explicit-record-fields-plugin == 2.6.0.0
    cpp-options: -DexplicitFields

-----------------------------
-- overloaded record dot plugin
-----------------------------

flag overloadedRecordDot
  description: Enable overloadedRecordDot plugin
  default:     True
  manual:      True

common overloadedRecordDot
  if flag(overloadedRecordDot)
    build-depends: hls-overloaded-record-dot-plugin == 2.6.0.0
    cpp-options: -Dhls_overloaded_record_dot

-----------------------------
-- floskell plugin
-----------------------------

flag floskell
  description: Enable floskell plugin
  default:     True
  manual:      True

common floskell
  if flag(floskell) && (impl(ghc < 9.7) || flag(ignore-plugins-ghc-bounds))
    build-depends: hls-floskell-plugin == 2.6.0.0
    cpp-options: -Dhls_floskell

-----------------------------
-- fourmolu plugin
-----------------------------

flag fourmolu
  description: Enable fourmolu plugin
  default:     True
  manual:      True

common fourmolu
  if flag(fourmolu)
    build-depends: hls-fourmolu-plugin == 2.6.0.0
    cpp-options: -Dhls_fourmolu

-----------------------------
-- ormolu plugin
-----------------------------

flag ormolu
  description: Enable ormolu plugin
  default:     True
  manual:      True

common ormolu
  if flag(ormolu)
    build-depends: hls-ormolu-plugin == 2.6.0.0
    cpp-options: -Dhls_ormolu

-----------------------------
-- stylish-haskell plugin
-----------------------------

flag stylishHaskell
  description: Enable stylishHaskell plugin
  default:     True
  manual:      True

common stylishHaskell
  if flag(stylishHaskell) && (impl(ghc < 9.8.0) || flag(ignore-plugins-ghc-bounds))
    build-depends: hls-stylish-haskell-plugin == 2.6.0.0
    cpp-options: -Dhls_stylishHaskell

-----------------------------
-- refactor plugin
-----------------------------

flag refactor
  description: Enable refactor plugin
  default:     True
  manual:      True

common refactor
  if flag(refactor)
    build-depends: hls-refactor-plugin == 2.6.0.0
    cpp-options: -Dhls_refactor

-----------------------------
-- semantic tokens plugin
-----------------------------

flag semanticTokens
  description: Enable semantic tokens plugin
  default:     True
  manual:      True

common semanticTokens
  if flag(semanticTokens)
    build-depends: hls-semantic-tokens-plugin == 2.6.0.0
    cpp-options: -Dhls_semanticTokens

-----------------------------
-- HLS
-----------------------------

library
  import:           common-deps
                    -- configuration
                  , warnings
                  , pedantic
                  -- plugins
                  , cabal
                  , callHierarchy
                  , cabalfmt
                  , changeTypeSignature
                  , class
                  , eval
                  , importLens
                  , rename
                  , retrie
                  , hlint
                  , stan
                  , moduleName
                  , pragmas
                  , splice
                  , alternateNumberFormat
                  , qualifyImportedNames
                  , codeRange
                  , gadt
                  , explicitFixity
                  , explicitFields
                  , floskell
                  , fourmolu
                  , ormolu
                  , stylishHaskell
                  , refactor
                  , overloadedRecordDot
                  , semanticTokens

  exposed-modules:
    Ide.Arguments
    Ide.Main
    Ide.Version
    HlsPlugins

  other-modules:    Paths_haskell_language_server
  autogen-modules:  Paths_haskell_language_server
  hs-source-dirs:   src
  build-depends:
    , async
    , base16-bytestring
    , bytestring
    , containers
    , cryptohash-sha1
    , data-default
    , ghc
    , ghcide                == 2.6.0.0
    , githash               >=0.1.6.1
    , lsp                   >= 2.3.0.0
    , hie-bios
    , hiedb
    , hls-plugin-api        == 2.6.0.0
    , optparse-applicative
    , optparse-simple
    , process
    , hls-graph
    , safe-exceptions
    , sqlite-simple
    , unordered-containers
    , aeson-pretty

  default-language: Haskell2010
  default-extensions: DataKinds, TypeOperators

executable haskell-language-server
  import:           common-deps
                    -- configuration
                  , warnings
                  , pedantic
  main-is:          Main.hs
  hs-source-dirs:   exe

  ghc-options:
    -threaded
    -- allow user RTS overrides
    -rtsopts
    -- disable idle GC
    -- increase nursery size
    -- Enable collection of heap statistics
    "-with-rtsopts=-I0 -A128M -T"
    -Wno-unticked-promoted-constructors
  if flag(pedantic)
    ghc-options: -Werror
  if !os(windows) && flag(dynamic)
  -- We want to link against the dyn rts just like official GHC binaries do;
  --   the linked rts determines how external libs are loaded dynamically by TH.
  -- The standard way of doing this is via the --enable-dynamic-executables Cabal option
  -- Unfortunately it doesnt' work, see https://github.com/haskell/haskell-language-server/issues/2659
  -- One can use --ghc-options=-dynamic but this gets applied to the dependencies as well,
  -- which results in massive rebuilds and incompatibilities with profiling.
  -- So instead we set the -dynamic flag diretly here.
    ghc-options: -dynamic

  build-depends:
    , aeson
    , async
    , base16-bytestring
    , binary
    , bytestring
    , containers
    , cryptohash-sha1
    , deepseq
    , ghc
    , ghc-boot-th
    , ghcide
    , hashable
    , haskell-language-server
    , lsp
    , hie-bios
    , hiedb
    , lens
    , regex-tdfa
    , optparse-applicative
    , hls-plugin-api
    , lens
    , mtl
    , regex-tdfa
    , safe-exceptions
    , hls-graph
    , sqlite-simple
    , stm
    , temporary
    , transformers
    , unordered-containers

  default-language: Haskell2010
  default-extensions: DataKinds, TypeOperators

executable haskell-language-server-wrapper
  import:           common-deps
                  , warnings
                  , pedantic
  main-is:          Wrapper.hs
  hs-source-dirs:   exe
  other-modules:    Paths_haskell_language_server
  autogen-modules:  Paths_haskell_language_server
  ghc-options:
    -threaded
    -- allow user RTS overrides
    -rtsopts
    -- disable idle GC
    -- increase nursery size
    "-with-rtsopts=-I0 -A128M"

  build-depends:
    , data-default
    , ghc
    , ghc-paths
    , ghcide
    , gitrev
    , haskell-language-server
    , hie-bios
    , hls-plugin-api
    , lsp
    , lsp-types
    , mtl
    , optparse-applicative
    , optparse-simple
    , process
    , transformers
    , unliftio-core
  if !os(windows)
      build-depends:
          unix
        , containers

  default-language: Haskell2010


test-suite func-test
  import:             common-deps
                    , warnings
                    , pedantic
                    , refactor
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  build-tool-depends:
    haskell-language-server:haskell-language-server -any,
    ghcide:ghcide-test-preprocessor -any

  build-depends:
    , bytestring
    , data-default
    , deepseq
    , hashable
    , lens
    , lens-aeson
    , ghcide
    , ghcide-test-utils
    , hls-test-utils == 2.6.0.0
    , lsp-types
    , aeson
    , hls-plugin-api
    , lsp-test
    , containers
    , unordered-containers
    , row-types

  hs-source-dirs:     test/functional test/utils

  main-is:            Main.hs
  other-modules:
    Config
    ConfigSchema
    Format
    FunctionalBadProject
    HieBios
    Progress
    Test.Hls.Command
    Test.Hls.Flags

  default-extensions: OverloadedStrings
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

-- Duplicating inclusion plugin conditions until tests are moved to their own packages
  if flag(eval)
    cpp-options: -Dhls_eval
-- formatters
  if flag(floskell)
    cpp-options: -Dhls_floskell
  if flag(fourmolu)
    cpp-options: -Dhls_fourmolu
  if flag(ormolu)
    cpp-options: -Dhls_ormolu

test-suite wrapper-test
  import:             common-deps
                    , warnings
                    , pedantic
  type:               exitcode-stdio-1.0
  build-tool-depends:
    haskell-language-server:haskell-language-server-wrapper -any,
    haskell-language-server:haskell-language-server -any

  default-language:   Haskell2010
  build-depends:
      process
    , hls-test-utils

  hs-source-dirs:     test/wrapper
  main-is:            Main.hs

benchmark benchmark
    import:           common-deps
    -- Depends on shake-bench which is unbuildable after this point
    if impl(ghc >= 9.5)
      buildable: False
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    ghc-options: -Wall -Wno-name-shadowing -threaded
    main-is: Main.hs
    hs-source-dirs: bench
    build-tool-depends:
        ghcide-bench:ghcide-bench,
        hp2pretty:hp2pretty,
        implicit-hie:gen-hie
    default-extensions:
        BangPatterns
        DeriveFunctor
        DeriveGeneric
        FlexibleContexts
        GeneralizedNewtypeDeriving
        LambdaCase
        NamedFieldPuns
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns

    build-depends:
        aeson,
        containers,
        data-default,
        ghcide-bench,
        haskell-language-server,
        hls-plugin-api,
        lens,
        lens-aeson,
        optparse-applicative,
        shake,
        shake-bench == 0.2.*,
        yaml
